@@ -1702,5 +1702,7 @@ cl_symbols[] = {
 
 {EXT_ "INTERACTIVE-INTERRUPT", SI_ORDINARY, NULL, -1, OBJNULL},
 
+{SYS_ "STACK-OVERFLOW", SI_ORDINARY, NULL, -1, OBJNULL},
+
 /* Tag for end of list */
 {NULL, CL_ORDINARY, NULL, -1, OBJNULL}};
